2004-05-14  MenTaLguY  <mental@rydia.net>

	* src/display/nr-arena-shape.h, src/display/nr-arena-shape.cpp:
	  further reduced dependency on SPStyle

2004-05-14  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/libnr/nr-path.cpp, src/libnr/nr-path.h (nr_path_matrix_bbox_union):
	  Get rid of no-longer-needed tolerance arg.  Update callers.

	* src/selection.cpp, src/sp-chars.cpp, src/sp-image.cpp,
	  src/sp-item-group.cpp, src/sp-item.cpp, src/sp-item.h,
	  src/sp-marker.cpp, src/sp-root.cpp, src/sp-shape.cpp,
	  src/sp-symbol.cpp, src/sp-text.cpp, src/sp-typeset.cpp,
	  src/sp-use.cpp, src/dialogs/fill-style.cpp,
	  src/dialogs/stroke-style.cpp, src/display/nr-arena-shape.cpp,
	  src/libnr/nr-path.cpp, src/libnr/nr-path.h,
	  src/libnrtype/nr-font.cpp, src/libnrtype/nr-rasterfont.cpp,
	  src/libnrtype/nr-type-gnome.cpp, src/widgets/icon.cpp,
	  src/widgets/paint-selector.cpp:
	  Change argument from NRMatrix to NR::Matrix in SPItemClass->bbox,
	  sp_item_invoke_bbox, sp_item_invoke_bbox_full,
	  nr_path_matrix_bbox_union.  Users updated.

	* src/libnr/nr-rect.h, src/libnr/nr-rect.cpp (nr_rect_union_pt):
	  new function.

	* src/libnr/nr-matrix-fns.h, src/libnr/nr-matrix-fns.cpp
	  (NR::transform): new function.

	* src/Makefile_insert: Move fixes.cpp from libinkpre.a to libinkpost.a.
	* src/xml/Makefile_insert (xml_repr_action_test_LDADD):
	  Add libinkpost.a, for fixes.o.  `make check' now works again.

	* src/sp-text.cpp (sp_text_set_transform):
	  Don't include SP_OBJECT_CHILD_MODIFIED_FLAG in flags for
	  sp_object_request_update.  Addresses `critical' warning.

2004-05-13  John Cliff <simarilius@yahoo.com>

	* src/dialogs/stroke-style.cpp: Switched to using get_stock to retrieve markers.
	* src/helpers/stock-items.h, src/helpers/stock-items.cpp: created to handle stock items.
	* src/prefix.h: Added marker and gradient directorys.

2004-05-13  Kees Cook <kees@outflux.net>

	* configure.in, src/main.cpp, config.h.mingw, debian/rules: